[~] Изменение nginx.conf R: решение проблемы 413 FB: забыл указать в nginx максимальный размер загружаемого файла, установил на 10 Мб

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name 176.108.253.5;
 
+    # Устанавливаем максимальный размер загружаемоего файла
+    client_max_body_size 10m;
+
     location /static/ {
         alias /app/static/;
         expires 30d;
