[+] Настройки для CI/CD

--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,8 @@
-# . API
-API__INSTANCE_APP_NAME=main-application
-
-# .. Logger
-API__LOGGER__LEVEL={{LOGGER__LEVEL}}
-
-# .. X-TOKEN
-API__X_ACCESS_TOKEN={{MAIN_APPLICATION__API__X_ACCESS_TOKEN}}
-
-# . Postgres
-POSTGRES__HOST={{MAIN_APPLICATION__POSTGRES__HOST}}
-POSTGRES__PORT={{MAIN_APPLICATION__POSTGRES__PORT}}
-POSTGRES__USER={{MAIN_APPLICATION__POSTGRES__USER}}
-POSTGRES__PASSWORD={{MAIN_APPLICATION__POSTGRES__PASSWORD}}
-POSTGRES__DATABASE_NAME={{MAIN_APPLICATION__POSTGRES__DATABASE_NAME}}
-POSTGRES__VOLUME_PATH={{MAIN_APPLICATION__POSTGRES__VOLUME_PATH}}
-
-
-# . MAIN_APPLICATION
-# .. LOGGING
-LOGGER__LEVEL=DEBUG
-# .. SECURITY
-MAIN_APPLICATION__API__X_ACCESS_TOKEN=super_secure_token
-# .. POSTGRES
-MAIN_APPLICATION__POSTGRES__HOST=postgres
-MAIN_APPLICATION__POSTGRES__PORT=5432
-MAIN_APPLICATION__POSTGRES__USER=postgres
-MAIN_APPLICATION__POSTGRES__PASSWORD=super_secure_password
-MAIN_APPLICATION__POSTGRES__DATABASE_NAME=main_application
-MAIN_APPLICATION__POSTGRES__VOLUME_PATH=$VOLUMES_DEFAULTS_DIR/postgres
+SECRET_KEY={{SECRET_KEY}}
+DEBUG={{DEBUG}}
+POSTGRES_DB={{POSTGRES_DB}}
+POSTGRES_USER={{POSTGRES_USER}}
+POSTGRES_HOST={{POSTGRES_HOST}}
+POSTGRES_PORT={{POSTGRES_PORT}}
+POSTGRES_PASSWORD={{POSTGRES_PASSWORD}}
+POSTGRES_VOLUME_PATH={{POSTGRES_VOLUME_PATH}}
