--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,7 +31,7 @@ services:
       - .:/app:cached
     env_file:
       - .env
-    command: sh -c 'python3 manage.py migrate && python3 manage.py seed_data && gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3'
+    command: sh -c 'python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py seed_data && gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3'
     networks:
       - default
       - 36_kuda_ugodno_beckend
