--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ drf-yasg = "^1.21.8"
 gunicorn = "^23.0.0"
 django-phonenumber-field = "^8.0.0"
 phonenumbers = "^8.13.52"
+celery = "^5.4.0"
+redis = "^5.2.1"
+django-celery-beat = "^2.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
