--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,16 @@ POSTGRES_HOST={{POSTGRES_HOST}}
 POSTGRES_PORT={{POSTGRES_PORT}}
 POSTGRES_PASSWORD={{POSTGRES_PASSWORD}}
 POSTGRES_VOLUME_PATH={{POSTGRES_VOLUME_PATH}}
+ADMIN_EMAIL={{ADMIN_EMAIL}}
+ADMIN_PASSWORD={{ADMIN_PASSWORD}}
+EMAIL_HOST={{EMAIL_HOST}}
+EMAIL_PORT={{EMAIL_PORT}}
+EMAIL_HOST_USER={{EMAIL_HOST_USER}}
+EMAIL_HOST_PASSWORD={{EMAIL_HOST_PASSWORD}}
+
+EMAIL_HOST=smtp.yandex.ru
+EMAIL_PORT=465
+EMAIL_HOST_USER=ugodno.kuda36@yandex.ru
+EMAIL_HOST_PASSWORD=xlygzcclruonarse
+EMAIL_USE_TLS=False
+EMAIL_USE_SSL=True
