--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,12 +36,11 @@ services:
              python3 manage.py seed_data &&
              gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3 --timeout 120 --preload'
     networks:
-      - default
       - 36_kuda_ugodno_beckend
 
 networks:
   default:
     name: nginx_network
-    external: True
+    driver: bridge
   36_kuda_ugodno_beckend:
     name: 36_kuda_ugodno_beckend
