Revert "[~] Исправления в тестах: сгруппированы 1)CRUD-операции (в одном! тесте), 2)Получение списка и деталей, 3)Работа с удобствами"
This reverts commit 1d550ccda1fea4518c4de322487283c599de8368.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,11 +36,12 @@ services:
              python3 manage.py seed_data &&
              gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3 --timeout 120 --preload'
     networks:
+      - default
       - 36_kuda_ugodno_beckend
 
 networks:
   default:
     name: nginx_network
-    driver: bridge
+    external: True
   36_kuda_ugodno_beckend:
     name: 36_kuda_ugodno_beckend
