--- a/.env.sample
+++ b/.env.sample
@@ -1,21 +1,24 @@
 SECRET_KEY=
-DEBUG=
+DEBUG=True
 
-#DATABASE
+#Настройка БД
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_HOST=
 POSTGRES_PORT=
 POSTGRES_PASSWORD=
+POSTGRES_VOLUME_PATH=
 
-#USERNAME ADMIN AND PASSWORD
+#Настройка админки
 ADMIN_USERNAME=
 ADMIN_PASSWORD=
 
-#EMAIL
-#EMAIl
+#Настройки почты
 EMAIL_HOST=
 EMAIL_PORT=
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 
+#Настройки селери/редис
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
