[~] Дополнение настройки Celery и Redis
R: Нетворк не трогаем.
Из app не удаляем default.
В общей настройке сети не удаляем.
переменную селери в .env не добавляем.
В .env.sample убрать значение.

FB: Исправлено.

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 SECRET_KEY=
-DEBUG=True
+DEBUG=
 
 #Настройка БД
 POSTGRES_DB=
@@ -19,6 +19,3 @@ EMAIL_PORT=
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 
-#Настройки селери/редис
-CELERY_BROKER_URL=
-CELERY_RESULT_BACKEND=
