[~] доп_доп настройки Celery и Redis
R: Были неточности.

FB: Исправлено.

--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,15 @@
 SECRET_KEY=
 DEBUG=
 
+PORT_APP=
+
 #Настройка БД
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_HOST=
 POSTGRES_PORT=
 POSTGRES_PASSWORD=
+
 POSTGRES_VOLUME_PATH=
 
 #Настройка админки
@@ -19,3 +22,6 @@ EMAIL_PORT=
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 
+#Настройки Селери/редис
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
