--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,23 @@
 SECRET_KEY={{SECRET_KEY}}
 DEBUG={{DEBUG}}
+
+PORT_APP={{PORT_APP}}
+
 POSTGRES_DB={{POSTGRES_DB}}
 POSTGRES_USER={{POSTGRES_USER}}
 POSTGRES_HOST={{POSTGRES_HOST}}
 POSTGRES_PORT={{POSTGRES_PORT}}
 POSTGRES_PASSWORD={{POSTGRES_PASSWORD}}
+
 POSTGRES_VOLUME_PATH={{POSTGRES_VOLUME_PATH}}
+
 ADMIN_EMAIL={{ADMIN_EMAIL}}
 ADMIN_PASSWORD={{ADMIN_PASSWORD}}
+
 EMAIL_HOST={{EMAIL_HOST}}
 EMAIL_PORT={{EMAIL_PORT}}
 EMAIL_HOST_USER={{EMAIL_HOST_USER}}
 EMAIL_HOST_PASSWORD={{EMAIL_HOST_PASSWORD}}
+
+CELERY_BROKER_URL={{CELERY_BROKER_URL}}
+CELERY_RESULT_BACKEND={{CELERY_RESULT_BACKEND}}
