--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,7 +58,7 @@ services:
   celery:
     container_name: 36_kuda_ugodno_backend_celery_worker
     build: .
-    command: celery -A config worker --loglevel=info
+    command: celery -A config worker --loglevel=info --concurrency=1 и --max-tasks-per-child=1
     depends_on:
       - redis
       - db
@@ -72,7 +72,7 @@ services:
   celery_beat:
     container_name: 36_kuda_ugodno_backend_celery_beat
     build: .
-    command: celery -A config beat --loglevel=info
+    command: celery -A config beat --loglevel=info --concurrency=1 и --max-tasks-per-child=1
     depends_on:
       - redis
       - db
