--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -72,7 +72,7 @@ services:
   celery_beat:
     container_name: 36_kuda_ugodno_backend_celery_beat
     build: .
-    command: celery -A config beat --loglevel=info --concurrency=1 --max-tasks-per-child=1
+    command: celery -A config beat --loglevel=info
     depends_on:
       - redis
       - db
