--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   db:
-    container_name: 36_kuda_ugodno_backend_api_db_12
-    image: postgres:16.6-alpine3.21
+    container_name: kuda_ugodno_backend_db
+    image: postgres:17.2
     restart: unless-stopped
     env_file:
       - .env
@@ -16,10 +16,10 @@ services:
       retries: 5
       timeout: 10s
     networks:
-      - 36_kuda_ugodno_backend
+      - kuda_ugodno_backend
 
   app:
-    container_name: 36_kuda_ugodno_backend_api_12
+    container_name: kuda_ugodno_backend_api
     build: .
     ports:
       - "${PORT_APP}:${PORT_APP}"
@@ -39,10 +39,10 @@ services:
              gunicorn config.wsgi:application --bind 0.0.0.0:${PORT_APP} --workers 3 --timeout 120 --preload'
     networks:
       - default
-      - 36_kuda_ugodno_backend
+      - kuda_ugodno_backend
 
   redis:
-    container_name: 36_kuda_ugodno_backend_redis
+    container_name: kuda_ugodno_backend_redis
     image: redis
     restart: unless-stopped
     expose:
@@ -53,10 +53,10 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - 36_kuda_ugodno_backend
+      - kuda_ugodno_backend
 
   celery:
-    container_name: 36_kuda_ugodno_backend_celery_worker
+    container_name: kuda_ugodno_backend_celery_worker
     build: .
     command: celery -A config worker --loglevel=info --concurrency=1 --max-tasks-per-child=1
     depends_on:
@@ -67,10 +67,10 @@ services:
     env_file:
       - .env
     networks:
-      - 36_kuda_ugodno_backend
+      - kuda_ugodno_backend
 
   celery_beat:
-    container_name: 36_kuda_ugodno_backend_celery_beat
+    container_name: kuda_ugodno_backend_celery_beat
     build: .
     command: celery -A config beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     depends_on:
@@ -81,11 +81,11 @@ services:
     env_file:
       - .env
     networks:
-      - 36_kuda_ugodno_backend
+      - kuda_ugodno_backend
 
 networks:
   default:
     name: nginx_network
     external: True
   36_kuda_ugodno_backend:
-    name: 36_kuda_ugodno_backend
+    name: kuda_ugodno_backend
