--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
       retries: 5
       timeout: 10s
     networks:
-      - kuda_ugodno_backend
+      - 36_kuda_ugodno_backend
 
   app:
     container_name: kuda_ugodno_backend_api
@@ -39,7 +39,7 @@ services:
              gunicorn config.wsgi:application --bind 0.0.0.0:${PORT_APP} --workers 3 --timeout 120 --preload'
     networks:
       - default
-      - kuda_ugodno_backend
+      - 36_kuda_ugodno_backend
 
   redis:
     container_name: kuda_ugodno_backend_redis
@@ -53,7 +53,7 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - kuda_ugodno_backend
+      - 36_kuda_ugodno_backend
 
   celery:
     container_name: kuda_ugodno_backend_celery_worker
@@ -67,7 +67,7 @@ services:
     env_file:
       - .env
     networks:
-      - kuda_ugodno_backend
+      - 36_kuda_ugodno_backend
 
   celery_beat:
     container_name: kuda_ugodno_backend_celery_beat
@@ -81,11 +81,11 @@ services:
     env_file:
       - .env
     networks:
-      - kuda_ugodno_backend
+      - 36_kuda_ugodno_backend
 
 networks:
   default:
     name: nginx_network
     external: True
   36_kuda_ugodno_backend:
-    name: kuda_ugodno_backend
+    name: 36_kuda_ugodno_backend
