--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,7 @@ services:
     expose:
       - 5432
     volumes:
-      - ${POSTGRES_VOLUME_PATH}/postgres:/var/lib/postgresql/data
-      - ${POSTGRES_VOLUME_PATH}/logs:/var/log/postgresql
+      - ku_data:/var/lib/postgresql/data
     healthcheck:
       test: [ 'CMD-SHELL', '-c', 'pg_isready -U $POSTGRES_USER -d $POSTGRES_DB' ]
       interval: 5s
@@ -22,7 +21,7 @@ services:
     container_name: kuda_ugodno_backend_api
     build: .
     ports:
-      - "${PORT_APP}:${PORT_APP}"
+      - "8000:8000"
     depends_on:
       db:
         condition: service_healthy
@@ -36,9 +35,8 @@ services:
       sh -c 'python3 manage.py makemigrations --noinput &&
              python3 manage.py migrate &&
              python3 manage.py seed_data &&
-             gunicorn config.wsgi:application --bind 0.0.0.0:${PORT_APP} --workers 3 --timeout 120 --preload'
+             gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3 --timeout 120 --preload'
     networks:
-      - default
       - 36_kuda_ugodno_backend
 
   redis:
@@ -83,9 +81,22 @@ services:
 #    networks:
 #      - 36_kuda_ugodno_backend
 
+  nginx:
+    image: nginx:latest
+    restart: on-failure
+    ports:
+      - "80:80"
+    volumes:
+      - .:/app
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - app
+    networks:
+      - 36_kuda_ugodno_backend
+
 networks:
-  default:
-    name: nginx_network
-    external: True
   36_kuda_ugodno_backend:
     name: 36_kuda_ugodno_backend
+
+volumes:
+  ku_data:
