--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
   app:
     container_name: kuda_ugodno_backend_api
     build: .
+    user: "1001:1003"
     ports:
       - "8000:8000"
     depends_on:
