--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,7 @@ services:
         condition: service_healthy
     volumes:
       - .:/app:cached
+      - media_volume:/app/media
     env_file:
       - .env
     command: >
@@ -101,3 +102,4 @@ networks:
 
 volumes:
   ku_data:
+  media_volume:
