--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,15 @@ djangorestframework = "^3.15.2"
 pillow = "^11.0.0"
 psycopg2-binary = "^2.9.10"
 python-dotenv = "^1.0.1"
-drf-yasg = "^1.21.8"
 gunicorn = "^23.0.0"
 django-phonenumber-field = "^8.0.0"
 phonenumbers = "^8.13.52"
 celery = "^5.4.0"
 redis = "^5.2.1"
 django-celery-beat = "^2.7.0"
+drf-spectacular = "^0.28.0"
 django-cors-headers = "^4.6.0"
+drf-yasg = "^1.21.8"
 
 
 [tool.poetry.group.dev.dependencies]
