--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
     env_file:
       - .env
     command: >
-      sh -c 'python3 manage.py makemigrations &&
+      sh -c 'python3 manage.py makemigrations --noinput &&
              python3 manage.py migrate &&
              python3 manage.py seed_data &&
              gunicorn config.wsgi:application --bind 0.0.0.0:${PORT_APP} --workers 3 --timeout 120 --preload'
