--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
     env_file:
       - .env
     command: >
-      sh -c 'python3 manage.py collectstatic &&
+      sh -c 'python3 manage.py collectstatic --noinput &&
              python3 manage.py makemigrations --noinput &&
              python3 manage.py migrate &&
              python3 manage.py seed_data &&
