[*] авторизация пользователя/подготовка структуры для авторизации через соцсети (Google, VK, Яндекс)
R: новое
FB:
1)Добавлена аутентификацию пользователей через email с отправкой 4-значного кода. Если пользователь существует, он получает код и может войти в систему, введя его. Если пользователя нет, система возвращает ошибку 404, и фронтенд должен перенаправить его на страницу регистрации. Аутентификация построена на JWT через `rest_framework_simplejwt` = безопасная работа с токенами.
В моделе `User` есть использование `ChoiceField` и метода `clean()` - после успешной аутентификации бэкенд возвращает роль пользователя (`role`), и фронтенд на основе этой информации перенаправляет пользователя в нужный личный кабинет (`/dashboard/tourist` или `/dashboard/operator`).

2)Подготовлена структура для авторизации через соцсети (Google, VK, Яндекс) с использованием `django-allauth` и `dj-rest-auth`, но подключение самих OAuth-клиентов и настройку входа через соцсети предстоит доработать.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "36-kuda-ugodno-backend-api"
 version = "0.0.0"
 description = "API сервис для веб-сайта 'Куда Угодно'"
-authors = ["Антон Громов", "Никита", "Николай", "Татьяна Харламова"]
+authors = ["Антон Громов", "Никита", "Анна Боссир", "Татьяна Харламова"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -21,6 +21,10 @@ django-celery-beat = "^2.7.0"
 drf-spectacular = "^0.28.0"
 django-cors-headers = "^4.6.0"
 drf-yasg = "^1.21.8"
+dj-rest-auth = "^7.0.1"
+django-allauth = "^65.4.0"
+social-auth-app-django = "^5.4.2"
+djangorestframework-simplejwt = "^5.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
