--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 SECRET_KEY={{SECRET_KEY}}
 DEBUG={{DEBUG}}
+ALLOWED_HOSTS={{ALLOWED_HOSTS}}
+APP_VOLUME_PATH={{APP_VOLUME_PATH}}
 
 PORT_APP={{PORT_APP}}
 
