--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ dj-rest-auth = "^7.0.1"
 django-allauth = "^65.4.0"
 social-auth-app-django = "^5.4.2"
 djangorestframework-simplejwt = "^5.4.0"
+pytest = "^8.3.4"
+pytest-django = "^4.10.0"
+factory-boy = "^3.3.3"
 
 
 [tool.poetry.group.dev.dependencies]
