--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,25 @@ factory-boy = "^3.3.3"
 black = "^24.10.0"
 isort = "^5.13.2"
 flake8 = "^7.1.1"
+pre-commit = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 119
+exclude = """
+    migrations/
+"""
+
+[tool.isort]
+include_trailing_comma = true
+line_length = 119
+lines_after_imports = 2
+multi_line_output = 3
+skip = ["__init__.py"]
+
+[tool.flake8]
+max-line-length = 119
+exclude = ".git,__pycache__,poetry.lock,pyproject.toml,migrations,tests.py"
