--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,11 +17,7 @@ repos:
 
       - id: flake8
         name: flake8
-        entry: flake8
+        entry: flake8 --config ./.flake8 .
         language: python
         types: [ python ]
-        additional_dependencies:
-          - flake8
-        args:
-          - --config=pyproject.toml
         pass_filenames: false
