--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,14 +42,15 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 119
-exclude = "migrations/"
+extend-exclude = "migrations/"
 
 [tool.isort]
+profile = "black"
 include_trailing_comma = true
 line_length = 119
 lines_after_imports = 2
 multi_line_output = 3
-skip = ["__init__.py"]
+skip = ["__init__.py", "**/migrations/*"]
 
 [tool.flake8]
 max-line-length = 119
