--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,20 +29,15 @@ pytest = "^8.3.4"
 pytest-django = "^4.10.0"
 factory-boy = "^3.3.3"
 
-
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
 isort = "^5.13.2"
 flake8 = "^7.1.1"
 pre-commit = "^4.1.0"
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
 [tool.black]
 line-length = 119
-extend-exclude = "migrations/"
+extend-exclude = "/migrations/"
 
 [tool.isort]
 profile = "black"
@@ -55,3 +50,7 @@ skip = ["__init__.py", "**/migrations/*"]
 [tool.flake8]
 max-line-length = 119
 exclude = ".git,__pycache__,poetry.lock,pyproject.toml,migrations,tests.py"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
