--- a/.env.sample
+++ b/.env.sample
@@ -1,27 +1,27 @@
-SECRET_KEY=
-DEBUG=
-
-PORT_APP=
+#Django настройки
+SECRET_KEY=Yey,eltnk.jtpyfxtybt_rjnjhjt_vj;tn,snmCtqfc
+DEBUG=True
+PORT_APP=8000
+ALLOWED_HOSTS=localhost,127.0.0.1
 
 #Настройка БД
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PORT=
-POSTGRES_PASSWORD=
+POSTGRES_DB=ku
+POSTGRES_USER=postgres
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+POSTGRES_PASSWORD=super_secret_password
+POSTGRES_VOLUME_PATH=/path/to/postgres/data
 
-POSTGRES_VOLUME_PATH=
-
-#Настройка админки
-ADMIN_USERNAME=
+#Настройка админки Необходимо вписать свои значения
+ADMIN_EMAIL=
 ADMIN_PASSWORD=
 
 #Настройки почты
-EMAIL_HOST=
-EMAIL_PORT=
-EMAIL_HOST_USER=
-EMAIL_HOST_PASSWORD=
+EMAIL_HOST=smtp.yandex.ru
+EMAIL_PORT=465
+EMAIL_HOST_USER=ugodno.kuda36@yandex.ru
+EMAIL_HOST_PASSWORD=xlygzcclruonarse
 
 #Настройки Селери/редис
-CELERY_BROKER_URL=
-CELERY_RESULT_BACKEND=
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
