--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
         condition: service_healthy
     volumes:
       - .:/app:cached
+      - static_data:/app/static
 #      - ${APP_VOLUME_PATH}:/app/static
     env_file:
       - .env
@@ -97,6 +98,7 @@ services:
       - app
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - static_data:/app/static
     networks:
       - 36_kuda_ugodno_backend
 
@@ -109,3 +111,4 @@ networks:
 
 volumes:
   ku_data:
+  static_data:
