[+] Добавление фикстуры с одним отлем, с двумя номерами, с рейсами туда и обратно. R: нужно чтобы фронт не создавал это сам, потому что он видимо не может это сделать DB: добавлен еще файл dump.json, в котором уже есть созданные данные

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,6 +41,7 @@ services:
              python3 manage.py makemigrations --noinput &&
              python3 manage.py migrate &&
              python3 manage.py seed_data &&
+             python3 manage.py loaddata dump.json &&
              gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3 --timeout 120 --preload'
     networks:
 #      - default
