--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ djangorestframework-simplejwt = "^5.4.0"
 pytest = "^8.3.4"
 pytest-django = "^4.10.0"
 factory-boy = "^3.3.3"
+django-filter = "^25.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
