[~] Добавление фикстур для фронта. Создаётся 10 отлей, каждый отель имеет по 4 фотографии, в каждом отеле создаётся по 5 номеров, в каждом номере есть по 6 фотографий. Создаётся 10 рейсов из москвы в рандомные страну/город отеля и 10 рейсов обратно в Москву. Создаются 2 туроператора, которые создают 20 туров, на основе рейсов, отелей, номеров. Создаётся 4 гостя. Создаётся 3 заявки

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,7 +41,9 @@ services:
              python3 manage.py makemigrations --noinput &&
              python3 manage.py migrate &&
              python3 manage.py seed_data &&
-             python3 manage.py loaddata dump.json &&
+             python3 manage.py loaddata dump24_04.json &&
+             python3 manage.py c_hotel &&
+             python3 manage.py loaddata dump_24_04.json &&
              gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3 --timeout 120 --preload'
     networks:
 #      - default
