--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-django = "5.1.6"
+django = "^5.2.1"
 djangorestframework = "^3.15.2"
 pillow = "^11.0.0"
 psycopg2-binary = "^2.9.10"
@@ -16,7 +16,7 @@ gunicorn = "^23.0.0"
 django-phonenumber-field = "^8.0.0"
 phonenumbers = "^8.13.52"
 celery = "^5.4.0"
-redis = "^5.2.1"
+redis = "^6.0.0"
 django-celery-beat = "^2.7.0"
 drf-spectacular = "^0.28.0"
 django-cors-headers = "^4.6.0"
@@ -24,15 +24,15 @@ drf-yasg = "^1.21.8"
 dj-rest-auth = "^7.0.1"
 django-allauth = "^65.4.0"
 social-auth-app-django = "^5.4.2"
-djangorestframework-simplejwt = "^5.4.0"
+djangorestframework-simplejwt = "^5.5.0"
 pytest = "^8.3.4"
 pytest-django = "^4.10.0"
 factory-boy = "^3.3.3"
 django-filter = "^25.1"
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.10.0"
-isort = "^5.13.2"
+black = "^25.1.0"
+isort = "^6.0.1"
 flake8 = "^7.1.1"
 pre-commit = "^4.1.0"
 
