--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pytest = "^8.3.4"
 pytest-django = "^4.10.0"
 factory-boy = "^3.3.3"
 django-filter = "^25.1"
+django-autocomplete-light = "^3.12.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
