[~] Обновление c_hotel, чтобы больше создавалось инфы в проекте при старте

--- a/.env.sample
+++ b/.env.sample
@@ -17,10 +17,10 @@ ADMIN_EMAIL=
 ADMIN_PASSWORD=
 
 #Настройки почты
-EMAIL_HOST=smtp.yandex.ru
+EMAIL_HOST=smtp.timeweb.ru
 EMAIL_PORT=465
-EMAIL_HOST_USER=ugodno.kuda36@yandex.ru
-EMAIL_HOST_PASSWORD=xlygzcclruonarse
+EMAIL_HOST_USER=ku@mer1d1an.ru
+EMAIL_HOST_PASSWORD=960b78F8o
 
 #Настройки Селери/редис
 CELERY_BROKER_URL=redis://redis:6379/0
