--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "36-kuda-ugodno-backend-api"
-version = "0.0.0"
+version = "0.3.0"
 description = "API сервис для веб-сайта 'Куда Угодно'"
-authors = ["Антон Громов", "Никита", "Анна Боссир", "Татьяна Харламова"]
+authors = ["Никита Шидогубов", "Анна Зылёва", "Евгений Кудряшов", "Андрей Гусельников"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-django = "^5.2.1"
+python = "^3.12"
+django = "^5.2.3"
 djangorestframework = "^3.15.2"
 pillow = "^11.0.0"
 psycopg2-binary = "^2.9.10"
@@ -25,9 +25,6 @@ dj-rest-auth = "^7.0.1"
 django-allauth = "^65.8.1"
 social-auth-app-django = "^5.4.2"
 djangorestframework-simplejwt = "^5.5.0"
-pytest = "^8.3.4"
-pytest-django = "^4.10.0"
-factory-boy = "^3.3.3"
 django-filter = "^25.1"
 django-autocomplete-light = "^3.12.1"
 
@@ -36,6 +33,12 @@ black = "^25.1.0"
 isort = "^6.0.1"
 flake8 = "^7.1.1"
 pre-commit = "^4.1.0"
+
+
+[tool.poetry.group.test.dependencies]
+factory-boy = "^3.3.3"
+pytest-django = "^4.11.1"
+pytest = "^8.4.0"
 
 [tool.black]
 line-length = 119
