--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,16 @@
 repos:
   - repo: local
     hooks:
-      - id: isort
-        name: isort
-        entry: isort .
+      - id: ruff
+        name: ruff
+        entry: ruff check --fix --exit-non-zero-on-fix .
         language: system
-        types: [ python ]
+        types: [python]
         pass_filenames: false
 
-      - id: black
-        name: black
-        entry: black .
+      - id: ruff-format
+        name: ruff-format
+        entry: ruff format .
         language: system
-        types: [ python ]
-        pass_filenames: false
-
-      - id: flake8
-        name: flake8
-        entry: flake8 --config ./.flake8 .
-        language: python
-        types: [ python ]
+        types: [python]
         pass_filenames: false
