--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,14 +3,14 @@ repos:
     hooks:
       - id: ruff
         name: ruff
-        entry: ruff check --fix --exit-non-zero-on-fix .
+        entry: ruff check --fix --exit-non-zero-on-fix
         language: system
         types: [python]
-        pass_filenames: false
+        require_serial: true
 
       - id: ruff-format
         name: ruff-format
-        entry: ruff format .
+        entry: ruff format
         language: system
         types: [python]
-        pass_filenames: false
+        require_serial: true
