[~] Внесение изменений из ветки ci/cd

--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,11 @@ DEBUG=True
 PORT_APP=8000
 ALLOWED_HOSTS=localhost,127.0.0.1
 
+#Настройки проекта
+GUNICORN_HOST=0.0.0.0
+GUNICORN_PORT=8000
+SERVICE_TYPE=app
+
 #Настройка БД
 POSTGRES_DB=ku
 POSTGRES_USER=postgres
@@ -11,6 +16,8 @@ POSTGRES_HOST=db
 POSTGRES_PORT=5432
 POSTGRES_PASSWORD=super_secret_password
 POSTGRES_VOLUME_PATH=/path/to/postgres/data
+# POSTGRES_SCHEMA=ku
+POSTGRES_DSN=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
 #Настройка админки Необходимо вписать свои значения
 ADMIN_EMAIL=
@@ -23,5 +30,12 @@ EMAIL_HOST_USER=ku@mer1d1an.ru
 EMAIL_HOST_PASSWORD=960b78F8o
 
 #Настройки Селери/редис
-CELERY_BROKER_URL=redis://redis:6379/0
-CELERY_RESULT_BACKEND=redis://redis:6379/0
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+CELERY_BROKER_URL=${REDIS_HOST}://${REDIS_HOST}:${REDIS_PORT}/${REDIS_DB}
+CELERY_RESULT_BACKEND=${REDIS_HOST}://${REDIS_HOST}:${REDIS_PORT}/${REDIS_DB}
+CELERY_FLOWER_PORT=5555
+
+#Настройки Nginx
+NGINX_PORT=80
