--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,12 @@
 services:
   db:
     container_name: kuda_ugodno_backend_db
-    image: postgres:17.5
+    image: postgres:17.6
     restart: unless-stopped
     env_file:
       - .env
-    expose:
-      - 5432
+    ports:
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
 #      - ${POSTGRES_VOLUME_PATH}/postgres:/var/lib/postgresql/data
 #      - ${POSTGRES_VOLUME_PATH}/logs:/var/log/postgresql
@@ -21,9 +21,11 @@ services:
 
   app:
     container_name: kuda_ugodno_backend_api
-    build: .
+    build:
+      context: .
+      dockerfile: ./docker/api/Dockerfile
     ports:
-      - "8000:8000"
+      - "${GUNICORN_PORT}:${GUNICORN_PORT}"
     depends_on:
       db:
         condition: service_healthy
@@ -35,12 +37,6 @@ services:
 #      - ${APP_VOLUME_PATH}:/app/static
     env_file:
       - .env
-    command: >
-      sh -c 'python3 manage.py collectstatic --noinput &&
-             python3 manage.py makemigrations --noinput &&
-             python3 manage.py migrate &&
-             python3 manage.py c_hotel &&
-             gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3 --timeout 120 --preload'
     networks:
 #      - default
       - 36_kuda_ugodno_backend
@@ -49,8 +45,10 @@ services:
     container_name: kuda_ugodno_backend_redis
     image: redis
     restart: unless-stopped
-    expose:
-      - 6379
+    ports:
+      - "${REDIS_PORT}:${REDIS_PORT}"
+    volumes:
+      - redis_data:/data
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -59,10 +57,11 @@ services:
     networks:
       - 36_kuda_ugodno_backend
 
-  celery:
+  celery_worker:
     container_name: kuda_ugodno_backend_celery_worker
-    build: .
-    command: celery -A config worker --loglevel=info --concurrency=1 --max-tasks-per-child=1
+    build:
+      context: .
+      dockerfile: ./docker/api/Dockerfile
     depends_on:
       - redis
       - db
@@ -70,13 +69,17 @@ services:
       - .:/app
     env_file:
       - .env
+    environment:
+      - SERVICE_TYPE=celery_worker
+    restart: unless-stopped
     networks:
       - 36_kuda_ugodno_backend
 
   celery_beat:
     container_name: kuda_ugodno_backend_celery_beat
-    build: .
-    command: celery -A config beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    build:
+      context: .
+      dockerfile: ./docker/api/Dockerfile
     depends_on:
       - redis
       - db
@@ -84,6 +87,28 @@ services:
       - .:/app
     env_file:
       - .env
+    environment:
+      - SERVICE_TYPE=celery_beat
+    restart: unless-stopped
+    networks:
+      - 36_kuda_ugodno_backend
+
+  flower:
+    container_name: kuda_ugodno_backend_flower
+    build:
+      context: .
+      dockerfile: ./docker/api/Dockerfile
+    ports:
+      - "${CELERY_FLOWER_PORT}:${CELERY_FLOWER_PORT}"
+    depends_on:
+      - redis
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    environment:
+      - SERVICE_TYPE=flower
+    restart: unless-stopped
     networks:
       - 36_kuda_ugodno_backend
 
@@ -92,11 +117,12 @@ services:
     container_name: kuda_ugodno_backend_nginx
     restart: unless-stopped
     ports:
-      - "80:80"
+      - "${NGINX_PORT}:${NGINX_PORT}"
     depends_on:
       - app
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/configs:/etc/nginx/conf.d:ro
       - static_data:/app/static
     networks:
       - 36_kuda_ugodno_backend
@@ -111,3 +137,4 @@ networks:
 volumes:
   ku_data:
   static_data:
+  redis_data:
