--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ django-allauth = "^65.9.0"
 social-auth-app-django = "^5.5.1"
 djangorestframework-simplejwt = "^5.5.0"
 django-filter = "^25.1"
-django-autocomplete-light = "^3.12.1"
+django-autocomplete-light = "3.8.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.2.0"
